[tool.poetry]
name = "projet-test"
version = "0.1.0"
description = "Projet test"
authors = ["Vaihau Williamu <v.williamu@tahitinumerique.pf>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
streamlit = "^1.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
